[gd_scene load_steps=4 format=3 uid="uid://vst3irbo67is"]

[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="1_eg5db"]
[ext_resource type="VideoStream" path="res://Untitled-video-Made-with-Clipchamp.ogv" id="2_2qfq0"]
[ext_resource type="AudioStream" uid="uid://cij24g55dc5l3" path="res://Objects/music and sounds/background-drum-and-bass-117717.mp3" id="3_8oo4g"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_eg5db")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 1.7778

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="CanvasLayer/AspectRatioContainer"]
layout_mode = 2
stream = ExtResource("2_2qfq0")
volume_db = -80.0
autoplay = true
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 34.0
offset_top = -138.0
offset_right = 473.0
offset_bottom = -37.0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="play_button" type="Button" parent="CanvasLayer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../MarginContainer3/exit_button")
text = "Play"

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/VBoxContainer/MarginContainer2"]
layout_mode = 2
alignment = 1
item_count = 3
selected = 0
popup/item_0/text = "MAX Volume"
popup/item_0/id = 0
popup/item_1/text = "MED Volume"
popup/item_1/id = 1
popup/item_2/text = "MIN Volume"
popup/item_2/id = 2

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="exit_button" type="Button" parent="CanvasLayer/VBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_bottom = NodePath("../../MarginContainer/play_button")
text = "Exit
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8oo4g")
autoplay = true

[connection signal="finished" from="CanvasLayer/AspectRatioContainer/VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/MarginContainer/play_button" to="." method="_on_play_button_pressed"]
[connection signal="item_selected" from="CanvasLayer/VBoxContainer/MarginContainer2/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/MarginContainer3/exit_button" to="." method="_on_exit_button_pressed"]
